--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-
 
     <main>
         <section id="login">
@@ -17,23 +17,29 @@
                 
             </div>
             <div id="formulario">
+
                 <h1>Login</h1>
-                <p>Seja Bem-Vindo(a) novamente, faça login para acessar sua conta!</p>
-                <form action="login.php" method="post">
-                    <p id="email">
-                        <label for="iemail">Email:</label>
-                        <input type="email" name="email" id="iemail" required placeholder="seu e-mail">
-                    </p>
-                    <p id="senha">
-                        <label for="isenha">Senha:</label>
-                        <input type="password" name="senha" id="isenha" min="8" max="16" required  placeholder="sua senha">
-                    </p>
-                    <p>
-                        <input type="button" value="Entrar">
-                    </p>
-                    <p>
-                        <input type="button" value="Esqueci a senha">
-                    </p>
+
+                <p id="frase">Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer ajustes ao seu ambiente.</p>
+
+                <form action="login.php" method="post" autocomplete="on">
+
+                    <div class="campo">
+
+                        <i class="material-icons">person</i>
+
+                        <label for="iemail"></label>
+
+                        <input type="email" name="email" id="iemail" required placeholder="seu e-mail" autocomplete="email">
+
+                    </div>
+                    <div class="campo">
+                        <i class="material-icons">vpn_key</i>
+                        <label for="isenha"></label>
+                        <input type="password" name="senha" id="isenha" min="8" max="16" required  placeholder="sua senha" autocomplete="current-password">
+                    </div>
+                   <input type="submit" value="Enviar">
+                   <a href="esquci.html" class="botao">Esqueci a senha <i class="material-icons">mail</i></a>
                 </form>
             </div>
         </section>
